Fixed overlapping links.

--- a/baking/styles/styles.css
+++ b/baking/styles/styles.css
@@ -160,8 +160,14 @@ nav a {
     max-height: 100%;
 }
 
-#brownie-text, #cookie-text {
+#brownie-text {
     grid-column: 1/2;
+    grid-row: 2/3;
+    font-size: 20px;
+    color: var(--pink-primary)
+}
+#cookie-text {
+    grid-column: 2/3;
     grid-row: 2/3;
     font-size: 20px;
     color: var(--pink-primary)
